<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/age_input_edit_text"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/height_input"
        app:layout_constraintTop_toBottomOf="@id/age_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/height_input_edit_text"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight_input"
        app:layout_constraintTop_toBottomOf="@id/height_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weight_input_edit_text"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/gender_question"
        style="@style/Widget.BMI.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_input"
        android:layout_marginTop="16dp"
        />

    <RadioGroup
        android:id="@+id/gender_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/male_option"
        app:layout_constraintTop_toBottomOf="@id/gender_question"
        app:layout_constraintStart_toStartOf="parent"
        >
        <RadioButton
            android:id="@+id/male_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_option"
            />
        <RadioButton
            android:id="@+id/female_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_option"
            />
    </RadioGroup>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/button_text"
        app:layout_constraintTop_toBottomOf="@id/gender_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/bmi_result"
        style="@style/Widget.BMI.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "BMI Result: 20.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        android:layout_marginTop="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>